--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,13 @@
+@import "./mixins.scss";
+
+* {
+    @include vendor-prefix("box-sizing", "border-box");
+  }
+
 body {
+    .searchResults {
+        @include box-shadow(20px, 20px, 40px, #ef1234);
+    }
     p {
         color: blue;
     }
