--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,7 +5,10 @@
   }
 
 body {
-    .searchResults {
+    .box {
+        width: 150px;
+        height: 150px;
+        background-color: green;
         @include box-shadow(20px, 20px, 40px, #ef1234);
     }
     p {
